--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .textarea {
   color: #dcddde !important;
@@ -37,7 +18,7 @@
 }
 
 body {
-  background: #2c2f33;
+  background: #23272a;
   font-family: 'Fira Sans', sans-serif;
   color: #ffffff;
   text-align: center;
@@ -56,7 +37,7 @@ body {
 .avatar, label {
   text-align: justify;
 }
-.button {
+.MuiButton-root {
   background-color: #5865F2 !important;
   width: 15em;
   color: white !important;
@@ -74,7 +55,7 @@ form button {
 
 .background {
   margin: 25px !important;
-  /*background-color: #23272a;*/
+  background-color: #23272a;
 }
 
 .banner {
@@ -84,7 +65,8 @@ form button {
   width: 100%;
   padding: 25px;
   border-radius: 10px;
-  margin-top: 15px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .form {
   width: 50%;
